--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </h1>
 
         <p class="text-lg text-gray-600 mb-8 max-w-sm mx-auto opacity-0 transform translate-y-5 animate-fade-in-up-3">
-            The time has comee! Its you birthdayyy! I got something special for you press the button below. 
+            The time has comee! Its your birthdayyy! I got something special for you press the button below. 
         </p>
 
         <button id="entryButton" class="animated-button flex items-center justify-center mx-auto space-x-2 opacity-0 transform scale-90 animate-scale-in-delay">
