--- a/main_birthday_page.html
+++ b/main_birthday_page.html
@@ -179,7 +179,7 @@
         // Add a click event listener
         nextPageButton.addEventListener('click', () => {
             // Define the filename for the next page
-            const nextPageUrl = 'final_birthday_page.html';
+            const nextPageUrl = 'secutity.html';
 
             // Navigate to the next page in the same window
             console.log('Redirecting to: ' + nextPageUrl);
