--- a/final_birthday_page.html
+++ b/final_birthday_page.html
@@ -168,7 +168,7 @@
 
         <!-- MP3 Player Container -->
         <div id="song-presentation" class="lyrics-box animated-element animate-slide-in-lyrics">
-            <h3 class="handwriting-font text-3xl font-bold text-soft-rose mb-6">Here's a song for u</h3>
+            <h3 class="handwriting-font text-3xl font-bold text-soft-rose mb-6">Here's the song</h3>
             
             <div class="flex justify-center items-center">
                 <audio controls class="w-full max-w-md mx-auto rounded-lg shadow-xl">
@@ -180,9 +180,9 @@
 
         </div>
         
-        <!-- Next Page Button -->
+        <!-- A letter for youuuu -->
         <button id="nextPageButton" class="next-page-button flex items-center justify-center mx-auto space-x-2 animate-fade-in-up-stagger" style="animation-delay: 1.5s;">
-            <span>Next Page</span>
+            <span>A letter for youuu</span>
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
             </svg>
@@ -197,7 +197,7 @@
         // Add a click event listener
         nextPageButton.addEventListener('click', () => {
             // Define the filename for the next page (a placeholder for now)
-            const nextPageUrl = 'next_page_after_song.html'; 
+            const nextPageUrl = 'grand_finale.html'; 
 
             // Navigate to the next page in the same window
             console.log('Redirecting to: ' + nextPageUrl);
